<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:divider="@color/transparent"
    app:allowDividerBelow="false">

    <io.legado.app.lib.prefs.PreferenceCategory
        android:title="@string/config_category_content"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/view_preference_category">

        <io.legado.app.lib.prefs.Preference
            android:key="bookSourceManage"
            android:summary="@string/book_source_manage_desc"
            android:title="@string/book_source_manage"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="rssSourceManage"
            android:summary="@string/rss_source_manage_summary"
            android:title="@string/rss_source_manage"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="txtTocRuleManage"
            android:summary="@string/config_txt_toc_rule"
            android:title="@string/txt_toc_rule"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="replaceManage"
            android:summary="@string/replace_purify_desc"
            android:title="@string/replace_purify"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="dictRuleManage"
            android:summary="@string/config_dict_rule"
            android:title="@string/dict_rule"
            app:iconSpaceReserved="false" />

    </io.legado.app.lib.prefs.PreferenceCategory>

    <io.legado.app.lib.prefs.PreferenceCategory
        android:title="@string/config_category_appearance"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/view_preference_category">

        <io.legado.app.lib.prefs.NameListPreference
            android:defaultValue="0"
            android:entries="@array/theme_mode"
            android:entryValues="@array/theme_mode_v"
            android:key="themeMode"
            android:summary="@string/theme_mode_desc"
            android:title="@string/theme_mode"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="theme_setting"
            android:summary="@string/theme_setting_s"
            android:title="@string/theme_setting"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="ai_setting"
            android:summary="@string/ai_setting_summary"
            android:title="@string/ai_setting"
            app:iconSpaceReserved="false" />

    </io.legado.app.lib.prefs.PreferenceCategory>

    <io.legado.app.lib.prefs.PreferenceCategory
        android:title="@string/config_category_sync"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/view_preference_category">

        <io.legado.app.lib.prefs.Preference
            android:key="web_dav_setting"
            android:summary="@string/web_dav_set_import_old"
            android:title="@string/backup_restore"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="cacheManage"
            android:summary="@string/cache_manage_summary"
            android:title="@string/cache_manage_title"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.SwitchPreference
            android:defaultValue="false"
            android:key="webService"
            android:summary="@string/web_service_desc"
            android:title="@string/web_service"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false" />

    </io.legado.app.lib.prefs.PreferenceCategory>

    <io.legado.app.lib.prefs.PreferenceCategory
        android:key="aboutCategory"
        android:title="@string/config_category_tools"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/view_preference_category">

        <io.legado.app.lib.prefs.Preference
            android:key="setting"
            android:summary="@string/other_setting_s"
            android:title="@string/other_setting"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="bookmark"
            android:summary="@string/all_bookmark"
            android:title="@string/bookmark"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="readRecord"
            android:summary="@string/read_record_summary"
            android:title="@string/read_record"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="fileManage"
            android:summary="@string/file_manage_summary"
            android:title="@string/file_manage"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="about"
            android:title="@string/about"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:key="exit"
            android:title="@string/exit"
            app:iconSpaceReserved="false" />

    </io.legado.app.lib.prefs.PreferenceCategory>

</androidx.preference.PreferenceScreen>
